fixed the horizontal scroll for 768px

--- a/resources/assets/css/styles-tsv.scss
+++ b/resources/assets/css/styles-tsv.scss
@@ -27,6 +27,10 @@
 
 @media only screen and (max-width: 768px) {
 
+    .container {
+        padding-left: 0px !important;
+    }
+
     select,
     input,
     textarea {
